[project]
name = "fillmore"
description = "Sentry event scrubber and utilities library"
version = "2.0.1"
readme = "README.rst"
keywords = ["sentry", "filter", "scrubber"]
authors = [{name = "Will Kahn-Greene"}]
license = {text = "MPLv2"}
requires-python = ">=3.8"
dependencies = [
    "attrs>=21.2.0",
    "sentry-sdk>=2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls.Homepage = "https://github.com/willkg/fillmore"
urls.Documentation = "https://fillmore.readthedocs.io/"
urls.Source = "https://github.com/willkg/fillmore/"
urls.Issues = "https://github.com/willkg/fillmore/issues"

[project.entry-points.pytest11]
fillmore = "fillmore.pytest_plugin"

[project.optional-dependencies]
dev = [
    "build",
    "cogapp",
    "mypy",
    "pytest",
    "ruff",
    "Sphinx; python_version > '3.8'",
    "sphinx_rtd_theme",
    "tomli; python_version < '3.11'",
    "tox",
    "tox-gh-actions",
    "twine",
    "Werkzeug",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py38"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true


[tool.pytest.ini_options]
filterwarnings = [
    "error",
]


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist =
    py38-sentry2,
    py{38,39}-django{none,42},
    py310-django{none,42,50},
    py{311,312}-django{none,42,50},
    py38-lint,
    py38-typecheck,
    py38-examples

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311
    3.12: py312

[testenv]
deps =
    sentry2: sentry-sdk==2.0.0
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
extras = dev
commands = pytest tests/ {posargs}

[testenv:py38-lint]
basepython = python3.8
changedir = {toxinidir}
commands =
    ruff format --check src tests docs examples
    ruff check src tests docs examples

[testenv:py38-examples]
basepython = python3.8
changedir = {toxinidir}/examples/
commands = ./run_examples.sh

[testenv:py38-typecheck]
basepython = python3.8
changedir = {toxinidir}
commands = mypy src/fillmore/
"""
